<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/top"
    android:orientation="vertical" >
     <Button
        android:id="@+id/bt_app_head"
        android:layout_width="match_parent"
        android:background="@drawable/popbutton"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/app_proj" />
    <Button
        android:id="@+id/bt_web_head"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
		android:background="@drawable/popbutton"
        android:text="@string/web_proj" />
	<Button
        android:id="@+id/bt_level_head"
        android:layout_width="match_parent"
        android:background="@drawable/popbutton"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/level_proj" />
	<Button
        android:id="@+id/bt_all_head"
        android:layout_width="match_parent"
        android:background="@drawable/popbutton"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/project" />

</LinearLayout>
