<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/my_listitem_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/myproject_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:text="@string/app_theme"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/myproject_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:maxLength="200"
            android:text="@string/time" />
    </LinearLayout>

    <TextView
        android:id="@+id/project_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_bt_bottom"
        android:layout_below="@id/my_listitem_layout"
        android:layout_marginTop="10dp"
        android:maxLength="200"
        android:text="@string/project_item" />

    <LinearLayout
        android:id="@+id/layout_bt_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/mybt_comment"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/comment" />

        <Button
            android:id="@+id/mybt_order"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/order" />

        <Button
            android:id="@+id/mybt_gets"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/comment_gets" />
    </LinearLayout>

</RelativeLayout>