<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/item2_project"
        android:layout_marginTop="60dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_order" />

    <Button
        android:id="@+id/item1_answer"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_answer" />

    <Button
        android:id="@+id/item4_gets"
        android:background="@drawable/anti_pop"
        android:layout_marginTop="5dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/my_gets" />

    <Button
        android:id="@+id/item3_trouble"
        android:layout_marginTop="5dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_question" />

    <Button
        android:id="@+id/item5_setting"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:background="@drawable/anti_pop"
        android:layout_height="50dp"
        android:text="@string/my_setting" />

    <Button
        android:id="@+id/item6_description"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_decription" />

    <Button
        android:id="@+id/item7_theme"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_theme" />

</LinearLayout>
