<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/main_thost_bg">

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />
        <RadioGroup 
            android:id="@+id/main_radio"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/bottom_text_selected"
            android:orientation="horizontal">
            <RadioButton 
                android:layout_gravity="center_vertical"
                android:id="@+id/message_radio"
                style="@style/mainTabs_radio"
                android:button="@null"
                android:drawableTop="@drawable/host_findproject_btn"
                android:text="@string/project"
                android:textColor="@drawable/tabhost_text_color"/>
            <RadioButton 
                android:layout_gravity="center_vertical"
                android:id="@+id/contacts_radio"
                style="@style/mainTabs_radio"
                android:button="@null"
                android:drawableTop="@drawable/host_deployproj_btn"
                android:text="@string/deploy"
                android:textColor="@drawable/tabhost_text_color" />
            <RadioButton
                android:layout_gravity="center_vertical"
                android:id="@+id/news_radio"
                style="@style/mainTabs_radio"
                android:button="@null"
                android:drawableTop="@drawable/host_myproject_btn"
                android:text="@string/myproject"
                android:textColor="@drawable/tabhost_text_color" ></RadioButton>
            
        </RadioGroup>
	</LinearLayout>

</TabHost>
