<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/top" >

        <TextView
            android:id="@+id/tv_deploy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="420dp"
        android:background="@color/top"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <!-- 父控件中设置editText不自动获取焦点 -->

                <TextView
                    android:id="@+id/theme_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/project_theme"
                    android:textColor="@color/color_bule" />

                <EditText
                    android:id="@+id/edit_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.37"
                    android:ems="10"
                    android:hint="@string/project_theme"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/description_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/title_detail_project"
                    android:textColor="@color/color_bule" />

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="top"
                    android:hint="@string/content_description"
                    android:minHeight="70dp"
                    android:singleLine="false" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_project_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edit_proj_link"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:hint="@string/edit_proj_link"
                    android:inputType="textUri"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/add_project_link"
                    android:layout_width="fill_parent"
                    android:layout_height="36dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:text="@string/project_link" />

                <Button
                    android:id="@+id/del_res_link"
                    android:layout_width="fill_parent"
                    android:layout_height="36dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:text="取消添加"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/spDeployM"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:entries="@array/deploy_mind" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/dep_cancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@color/color_bule3"
            android:text="@string/cancel"
            android:textColor="@color/bottom_text_unselected"
            android:textSize="18sp" />

        <Button
            android:id="@+id/project_dep"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_login"
            android:text="@string/deploy_button"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>