<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<TextView
	    android:id="@+id/tv_res_title"
       android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/project_theme"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/red"
        android:textSize="30sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="18sp" 
            android:layout_height="wrap_content"
            android:text="资源URL:" />

        <EditText
            android:layout_gravity="center"
            android:id="@+id/toast_res_editor"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>
    </LinearLayout>
	 <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/res_cancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/color_bule3"
            android:text="@string/cancel"
            android:textColor="@color/bottom_text_unselected"
            android:textSize="18sp" />

        <Button
            android:id="@+id/res_dep"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_login"
            android:text="@string/toast_touzi_button"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>
    

</LinearLayout>