<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/deep" >

    <!--
         <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical" >
    -->

    <LinearLayout
        android:id="@+id/linear_regist_img"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.stufinish.findproject.view.FadeImageView
            android:id="@+id/regist_img"
            android:scaleType="centerCrop"
            android:layout_width="120dp"
            android:src="@drawable/icon_addpic_focused"
            android:layout_height="120dp"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_login_username"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_below="@id/linear_regist_img"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/user_60" />

        <EditText
            android:id="@+id/et_User_Name"
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="3"
            android:hint="@string/reg_name"
            android:text="123"
            android:inputType="textPassword"
            android:maxWidth="200px" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_login_password"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_below="@id/linear_login_username"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/lock_60" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="3"
            android:hint="@string/reg_email"
           	android:text="123"
            android:inputType="textAutoComplete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_register"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_below="@id/linear_login_password"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:visibility="gone" >

        <EditText
            android:id="@+id/et_register_resources"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/register_resources"
            android:inputType="textAutoComplete"
            android:maxWidth="200px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/linear_register"
         >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@color/color_bule3"
            android:text="@string/login"
            android:textColor="@color/bottom_text_unselected"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_login"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center_vertical|bottom"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <CheckBox
            android:id="@+id/cbrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/top"
            android:text="记住密码"
            android:textSize="15sp" >
        </CheckBox>

        <CheckBox
            android:id="@+id/cbal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="自动登录"
            android:textSize="15sp" >
        </CheckBox>
    </LinearLayout>
    <!-- </ScrollView> -->

</RelativeLayout>